<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">概率统计测试系统</string>
    <string name="action_settings">Settings</string>
    <string name="main_rb_tab1">试题</string>
    <string name="main_rb_tab2">个人中心</string>
    <string name="main_rb_tab3">更多</string>
    <string name="share">分享</string>
    <string name="share_to_friends">分享给好友</string>
    <string name="high_prize">亲，给个好评吧!</string>
    <string name="client">客户端</string>
    <string name="setting">设置</string>
    <string name="feedback">意见反馈</string>
    <string name="update">检测更新</string>
    <string name="about">关于</string>
    
    
    

</resources>
