<?xml version="1.0" encoding="utf-8"?>
<TabHost android:id="@android:id/tabhost" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:id="@android:id/tabcontent" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <TabWidget android:id="@android:id/tabs" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0" />
        <RadioGroup android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/rg_main_tabs" android:background="@drawable/main_tabs" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
            <RadioButton android:id="@id/rb_main_tab1" android:checked="true" android:text="@string/main_rb_tab1" android:drawableTop="@drawable/main_tab1" style="@style/main_tab" />
            <RadioButton android:id="@id/rb_main_tab2" android:text="@string/main_rb_tab2" android:drawableTop="@drawable/main_tab2" style="@style/main_tab" />
            <RadioButton android:id="@id/rb_main_tab3" android:text="@string/main_rb_tab3" android:drawableTop="@drawable/main_tab3" style="@style/main_tab" />
        </RadioGroup>
    </LinearLayout>
</TabHost>
